# str_extensions

./: Cargo.toml  README.md
.github/workflows/: main.yml  pr.yml
benches/: bench_word_bounds.rs
src/: building.rs  cases.rs  lib.rs  type_coercion.rs
src/word_bounds/: mod.rs  resolver.rs  rules.rs
src/word_bounds/impls/: charwalk.rs  fancy_regex.rs  mod.rs  regex.rs  regexless.rs
tests/: test_word_bounds.rs
